RESOLVED FIXED130547
WindowFeatures.{x|y|width|height} are not initialized
https://bugs.webkit.org/show_bug.cgi?id=130547
Summary WindowFeatures.{x|y|width|height} are not initialized
David Kilzer (:ddkilzer)
Reported 2014-03-20 17:11:57 PDT
Uninit Error reported from write at IPC::Channel::ChannelImpl::ProcessOutgoingMessages <https://code.google.com/p/chromium/issues/detail?id=342591> Code Review: <https://codereview.chromium.org/177633011/>
Attachments
Patch v1 (3.15 KB, patch)
2014-03-21 08:30 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2014-03-20 17:12:13 PDT
David Kilzer (:ddkilzer)
Comment 2 2014-03-21 08:30:19 PDT
Created attachment 227436 [details] Patch v1
Darin Adler
Comment 3 2014-03-21 10:04:19 PDT
Comment on attachment 227436 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=227436&action=review I’m saying review+ but this change doesn’t seem to have much benefit. > Source/WebCore/ChangeLog:13 > + - Initialize x, y, width, height in String constructor. Why? To make automated code analysis tools happy? To actually fix a bug? Where’s the test case for the bug?
David Kilzer (:ddkilzer)
Comment 4 2014-03-21 10:25:43 PDT
(In reply to comment #3) > (From update of attachment 227436 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=227436&action=review > > I’m saying review+ but this change doesn’t seem to have much benefit. > > > Source/WebCore/ChangeLog:13 > > + - Initialize x, y, width, height in String constructor. > > Why? To make automated code analysis tools happy? To actually fix a bug? Where’s the test case for the bug? It's to make code analysis tools happy.
WebKit Commit Bot
Comment 5 2014-03-21 10:37:24 PDT
Comment on attachment 227436 [details] Patch v1 Clearing flags on attachment: 227436 Committed r166072: <http://trac.webkit.org/changeset/166072>
WebKit Commit Bot
Comment 6 2014-03-21 10:37:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.