WindowFeatures.{x|y|width|height} are not initialized <http://webkit.org/b/130547> <rdar://problem/16383151>

Reviewed by Darin Adler.

Based on a Blink patch in CRBug 342591 by zhaoqin.

* page/WindowFeatures.cpp:
(WebCore::WindowFeatures::WindowFeatures):
- Initialize x, y, width, height in String constructor.
- Move 'resizeable' variable to short-hand initialization since
  it is true in both cases.
- Use String::isEmpty() instead of checking its length.
* page/WindowFeatures.h:
(WebCore::WindowFeatures::WindowFeatures): Initialize x, y,
width, height in no-argument constructor.


Canonical link: https://commits.webkit.org/148613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166072 268f45cc-cd09-0410-ab3c-d52691b4dbfc